--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
      
     <a class="navbar-brand"><img src="assets/logo.jpg" width="400" height="300" alt=""></a>
 
-    <a class="btn btn-primary" href="#" role="button">Home</a>
+    <a class="btn btn-primary" href="#" role="button">Sagar Jain</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
