--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
 
         </li>
         <li class="nav-item">
-          <button type="button" class="btn btn-outline-primary">Collection</button>
+          <button type="button" class="btn btn-outline-primary">Shubham Collections</button>
 
         </li>
         <li class="nav-item">
