--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -1,23 +1,37 @@
+<a></a>
 
-<h1>Saru Collection</h1>
-
-<form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
-  <div class="form-group">
-    <input name="fullName" #fullName="ngModel" [(ngModel)]="service.formData.fullName" class="form-control" placeholder="Full nsme" required>
-    <div *ngIf="fullName.invalid && fullName.touched" class="validation-error">This field is required.</div>
+<form>
+  <div class="form-row">
+    <div class="col">
+        <label for="exampleFormControlInput1">First name</label>
+      <input type="text" class="form-control" placeholder="First name">
+    </div>
+    <div class="col">
+        <label for="exampleFormControlInput1">last name</label>
+      <input type="text" class="form-control" placeholder="Last name">
+      <div class="form-row">
+        <div class="col">
+        <label for="exampleFormControlInput1">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+      </div>
+      <div class="form-row">
+        <label for="exampleFormControlSelect1">Year of expirencet</label>
+        <select class="form-control" id="exampleFormControlSelect1">
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+      </div>
+    
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Describe yourself in few word</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-      <input name="city" #city="ngModel" [(ngModel)]="service.formData.city" class="form-control" placeholder="city">
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <input name="empcode" #empcode="ngModel" [(ngModel)]="service.formData.empcode" class="form-control" placeholder="emp.code">
-          </div>
-          <div class="form-group col-md-6">
-              <input name="mobile" #mobile="ngModel" [(ngModel)]="service.formData.mobile" class="form-control" placeholder="mobile">
-            </div>
-    </div>
-    <div class="form-group">
-      <button type= "submit" [disabled]="form.invalid" class="btn. btn-lg. btn-block.btn-info">SUBMIT</button>
-    </div>
 </form>
