--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,12 +13,7 @@
 
           <!-- Content -->
           <h4 class="text-uppercase font-weight-bold">Mail Us</h4>
-          <marquee>SARU Internet Pvt Ltd Block B (Greater Noida), 
-              Ground Floor, Embassy Tech Village, 
-              Outer Ring Road, Devarabeesanahalli Village, 
-              Varthur Hobli, Bengaluru East Taluk, 
-              Bengaluru District, 
-              Karnataka, India, 560103.</marquee>
+          <P>Sj@HCL.com</P>
 
         </div>
         <!-- Grid column -->
@@ -30,14 +25,10 @@
 
           <!-- Content -->
           <h5 class="text-uppercase font-weight-bold">Registered address></h5>
-          <p>SARU Internet Private Limited, 
-              Greater NOIDA, Ground Floor, ALPHA 1, 
-              80 Feet Road, B Block, 
-              NOIDA, 
-              NOIDA - 251101 
-              India 
-              CIN : U51109KA2012PTC066107 
-              Telephone: 273535.</p>
+          <p>HCL Technologies Ltd.
+            Technology Hub, SEZ
+            Plot No. 3A, Sector 126
+            Noida – 201304, India</p>
 
         </div>
         <!-- Grid column -->
