--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,26 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
      
-    <a class="navbar-brand"><img src="assets/logo.jpg" width="400" height="300" alt=""></a>
+ <img src="assets\cbyer.png" width="200" height="200" alt="">
 
-    <a class="btn btn-primary" href="#" role="button">Sagar Jain</a>
+    <a class="btn btn-primary" routerLink="" role="button">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="Home">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <button type="button" class="btn btn-outline-primary" routerLink='employee' >Details</button>
+          <button type="button" class="btn btn-outline-primary" routerLink='' >Services</button>
 
         </li>
         <li class="nav-item">
-          <button type="button" class="btn btn-outline-primary">Collection</button>
+          <button type="button" class="btn btn-outline-primary" routerLink='about'>About</button>
 
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+            <button type="button" class="btn btn-outline-primary" routerLink='employee' >Contact Us</button>
+
+          
         </li>
       </ul>
       <span class="navbar-text">
