--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
 <!-- Footer -->
 <div class="jumbotron jumbotron-fluid">
+  <hr>
 <footer class="page-footer font-small teal pt-4">
 
     <!-- Footer Text -->
@@ -12,8 +13,22 @@
         <div class="col-md-6 mt-md-0 mt-3">
 
           <!-- Content -->
-          <h4 class="text-uppercase font-weight-bold">Mail Us</h4>
-          <P>Sj@HCL.com</P>
+          <h4 class="text-uppercase font-weight-bold">Some of our recent work</h4>
+          <div class="card" style="width: 18rem;">
+          
+         
+              <img src="assets\nationalgeographicog.ngsversion.1530540626597.adapt.1900.1.jpg" class="card-img-top">
+              
+              <div class="card-body">
+                <h5 class="card-title">National Geographic</h5>
+                <p class="card-text">
+                    Database Driven, e-Commerce, Recent Work</p>
+                
+              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+          </div>
+  
 
         </div>
         <!-- Grid column -->
@@ -24,11 +39,11 @@
         <div class="col-md-6 mb-md-0 mb-3">
 
           <!-- Content -->
-          <h5 class="text-uppercase font-weight-bold">Registered address></h5>
-          <p>HCL Technologies Ltd.
-            Technology Hub, SEZ
-            Plot No. 3A, Sector 126
-            Noida – 201304, India</p>
+          <h5 class="text-uppercase font-weight-bold">About Cyber Group India Pvt. Ltd. :-></h5>
+          <p>
+              Registered in 2015 , Cyber Group India Pvt. Ltd. has made a name for itself in the list of top service providers of in India. Cyber Group India Pvt. Ltd. is listed in Trade India's list of verified companies offering wide array of etc. Contact here for in Greater Noida, Uttar Pradesh. 
+              
+              </p>
 
         </div>
         <!-- Grid column -->
@@ -41,10 +56,11 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
-      <a href="https://mdbootstrap.com/education/angular/"> SARU.COM</a>
+      <a href="https://mdbootstrap.com/education/angular/"> cbyer group</a>
     </div>
     <!-- Copyright -->
 
   </footer>
 </div>
+<hr>
   <!-- Footer -->
