--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,32 +1,22 @@
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-     
- <img src="assets\cbyer.png" width="200" height="200" alt="">
 
-    <a class="btn btn-primary" routerLink="" role="button">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="Home">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <button type="button" class="btn btn-outline-primary" routerLink='' >Services</button>
 
+
+
+  <img src="assets\cybergroup-logos.1.png" width="20%" height="20%" >
+
+  <ul class="nav justify-content-center">
+      <li class="nav-item">
+          <button type="button" class="btn btn-info" routerLink="subhome">Home</button>
+      </li>
+      <li class="nav-item">
+          <button type="button" class="btn btn-info" routerLink="subhome">services</button>
+      </li>
+      <li class="nav-item">
+          <button type="button" class="btn btn-info"routerLink="about" >About</button>
+      </li>
+      <li class="nav-item">
+          <button type="button" class="btn btn-info" routerLink="employee" >contactus</button>
         </li>
-        <li class="nav-item">
-          <button type="button" class="btn btn-outline-primary" routerLink='about'>About</button>
-
-        </li>
-        <li class="nav-item">
-            <button type="button" class="btn btn-outline-primary" routerLink='employee' >Contact Us</button>
-
-          
-        </li>
-      </ul>
-      <span class="navbar-text">
-        whatever want to buy youu...
-      </span>
-    </div>
-  </nav>
-
-
+    </ul>
+    <br>
